--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,80 +3,41 @@
 <div class="container">
   <div class="row">
     <div class="col-6">
-      <div class="row card">
-        <h5>Cards</h5>
-        <div class="col-8">
-          <div class="creditCard">
-            <p>cloudcash</p>
-            <span>premiere account</span>
-            <span class="cardNum">5789 **** **** 2847</span>
-            <div class="cardBottom">
-              <div>
-                <span >Card Holder</span>
-                <p *ngFor="let item of cards | keyvalue">{{item.key}}</p>
-              </div>
-              <div>
-                <span>Expire Date</span>
-                <p>06/21</p>
-              </div>
-            </div>
-          </div>
-          <div class="creditCardLimit">
-            <div class="progress">
-              <div
-                class="progress-bar"
-                role="progressbar"
-                style="width: 25%"
-                aria-valuenow="25"
-                aria-valuemin="0"
-                aria-valuemax="100"
-              ></div>
-            </div>
-            <p class="progressText">Expense limit <span>$350 / $4000</span></p>
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="balance">
-            <div class="creditNums">
-              <p class="currentBalance">$ 2850.75</p>
-              <span>Current balance</span>
-            </div>
-            <div class="creditNums">
-              <p class="availibleCredit">$ 348.75</p>
-              <span>Availible credit</span>
-            </div>
-            <div class="creditNums">
-              <p class="avaitingProvisions">$ 285.75</p>
-              <span>Avaiting provisions</span>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row card">
-        <h5>Billing Summary</h5>
-        <table class="table" id="tab">
-          <thead>
-            <tr>
-              <th scope="col">Service</th>
-              <th scope="col">Type</th>
-              <th scope="col">Date</th>
-              <th scope="col">Amount</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let e of billing">
-              <td>{{ e["service"] }}</td>
-              <td>{{ e["type"] }}</td>
-              <td>{{ e["date"] }}</td>
-              <td>{{ e["amount"] }}</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+      <app-card-details></app-card-details>
+      <app-billing-summary></app-billing-summary>
     </div>
     <div class="col-6">
-      <div class="row"></div>
-      <div class="row"></div>
+      <app-locations></app-locations>
+      <app-module-usage></app-module-usage>
+      <div class="row">
+        <div class="row card card-no-border">
+          <div class="card fdc col-6">
+            <p>Administrators</p>
+            <div class="administrators">
+              <div class="admin">
+                <img src="https://via.placeholder.com/30/4772B7" alt="" />
+                <span class="adminName">Ann</span>
+              </div>
+              <div class="admin">
+                <img src="https://via.placeholder.com/30/4772B7" alt="" />
+                <span class="adminName">Monica</span>
+              </div>
+              <div class="admin">
+                <img src="https://via.placeholder.com/30/4772B7" alt="" />
+                <span class="adminName">John</span>
+              </div>
+              <div class="admin">
+                <img src="https://via.placeholder.com/30/4772B7" alt="" />
+                <span class="adminName">Mike</span>
+              </div>
+              <div class="admin">
+                <img src="https://via.placeholder.com/30/4772B7" alt="" />
+                <span class="adminName">Mia</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
